--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<nav class ="menu-p">
 		<a href="">inicio</a>
 		<a href="">computadoras</a>
-		<a href="">blog</a>
+		<a href="https://kevin-contreras.github.io/Destinos-Turisticos-Guatemala/#">blog</a>
 		<a href="">contacto</a>
 	</nav>
 	</div>
