--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 	</section>
 	<footer class="p">
 	<h3 class="icon-network"> computer inc. 2021</h3>
+	<h3 class="icon-network"> Computadoras de calidad</h3>
 		<div class="final">
 			
 			<h3 class="icon-instagram"></h3>
